FIX: playcloud client docker recipe

--- a/clients/Dockerfile
+++ b/clients/Dockerfile
@@ -4,4 +4,4 @@ RUN apk update && apk add apache2-utils bash gcc git make musl-dev openssl-dev w
     cd /wrk2 &&\
     make &&\
     cp /wrk2/wrk /usr/local/bin && chmod +x /usr/local/bin/wrk
-COPY ab_playcloud.sh gen_random_data.sh simple_bench /
+COPY ab_playcloud.sh gen_random_data.sh simple_bench.sh /
