Add tracing logs

--- a/pyproxy/logging.conf
+++ b/pyproxy/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,proxy,dispatcher
+keys=root,proxy,dispatcher,metadata
 
 [handlers]
 keys=fileHandler, consoleHandler
@@ -18,6 +18,10 @@ qualname=proxy
 [logger_dispatcher]
 handlers=fileHandler
 qualname=dispatcher
+
+[logger_metadata]
+handlers=fileHandler
+qualname=metadata
 
 [handler_consoleHandler]
 class=StreamHandler
