--- a/clients/ycsb/Dockerfile
+++ b/clients/ycsb/Dockerfile
@@ -3,5 +3,6 @@ RUN apk update && apk add bash git python && git clone https://github.com/dburih
 WORKDIR /YCSB
 ENV YCSB_HOME="/YCSB"
 RUN mvn -pl com.yahoo.ycsb:playcloud-binding -am clean package
-COPY entrypoint.sh /usr/local/bin/
+COPY entrypoint.sh entrypoint_no_load.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/entrypoint.sh /usr/local/bin/entrypoint_no_load.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
