--- a/pyproxy/requirements.txt
+++ b/pyproxy/requirements.txt
@@ -9,8 +9,10 @@ futures==3.0.5
 google-api-python-client
 grpcio==1.6.0
 hiredis
+IPy==0.83
 kazoo==2.4.0
 mock>=2.0.0
+numpy
 paste==2.0.3
 pip
 protobuf==3.0.0a3
